# nrfs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  SPECIFICATION.rst  callgrind.sh  fuzz.sh  grcov.sh
Specification/: architecture.rst  file_system.rst  key_value_store.rst  object_store.rst
debug/: README.md  filter_trace.py  plot_alloc.py  tracedbg.py
fuse/: Cargo.toml
fuse/src/: dev.rs  inode.rs  job.rs  main.rs
fuse/src/fs/: channel.rs  inode.rs  mod.rs
fuse/src/fs/ops/: create.rs  destroy.rs  fallocate.rs  forget.rs  fsync.rs  getattr.rs  getxattr.rs  ioctl.rs  listxattr.rs  lookup.rs  mkdir.rs  mknod.rs  mod.rs  read.rs  readdir.rs  readlink.rs  removexattr.rs  rename.rs  rmdir.rs  setattr.rs  setxattr.rs  statfs.rs  symlink.rs  unlink.rs  write.rs
git_hooks/: forbid_futures_select.sh  pre-commit  setup.sh
nrfs/: Cargo.toml
nrfs/fuzz/: Cargo.toml
nrfs/fuzz/fuzz_targets/: random_ops.rs
nrfs/src/: attr.rs  config.rs  dir.rs  directory.rs  file.rs  item.rs  lib.rs  lock.rs  name.rs  record_cache.rs  record_tree.rs  storage.rs  test.rs
nrfs/src/dir/: child.rs  dir_data.rs  hasher.rs  hashmap.rs  header.rs  heap.rs  index.rs  item.rs  key.rs  mod.rs  object_id.rs  offset.rs
nrfs/src/dir/ext/: embedded.rs  mod.rs  mtime.rs  unix.rs
nrfs/src/dir/op/: alloc_item_slot.rs  compare_names.rs  dealloc_item_slot.rs  find.rs  init.rs  insert.rs  item.rs  item_get.rs  item_set.rs  mod.rs  remove_at.rs  rename.rs  transfer.rs  write_item.rs
nrfs/src/ext/: mod.rs  mtime.rs  unix.rs
nrfs/src/test/: attr.rs  dir.rs  file.rs  mod.rs
nrfs/src/test/fuzz/: mod.rs  v1.rs
nrkv/: Cargo.toml
nrkv/fuzz/: Cargo.toml
nrkv/fuzz/fuzz_targets/: leak_space.rs  random_ops.rs
nrkv/src/: conf.rs  header.rs  key.rs  lib.rs  store.rs  test.rs
nros/: Cargo.toml
nros/fuzz/: Cargo.toml
nros/fuzz/fuzz_targets/: random_ops.rs  read_write_1_object.rs
nros/src/: allocator.rs  background.rs  block_size.rs  cipher.rs  config.rs  header.rs  key_derivation.rs  lib.rs  object.rs  record.rs  record_cache.rs  record_tree.rs  resource.rs  test.rs  trace.rs  util.rs  waker_queue.rs  write_buffer.rs
nros/src/cache/: busy.rs  entry.rs  flush.rs  key.rs  lock.rs  lru.rs  mod.rs  object.rs  slot.rs  tree.rs  tree_data.rs
nros/src/cache/evict/: entry.rs  mod.rs  object.rs
nros/src/cache/mem/: busy.rs  lru.rs  mod.rs
nros/src/cache/mem/tracker/: lru.rs  mod.rs  total_usage.rs
nros/src/cache/memory_tracker/: lru.rs  mod.rs  total_usage.rs
nros/src/cache/object/: data.rs  get.rs  key.rs  mod.rs  read.rs  set.rs  write.rs  write_zeros.rs
nros/src/cache/tree/: data.rs  fetch.rs  get.rs  grow.rs  mod.rs  set.rs  set_zeros.rs  shrink.rs  update_record.rs  view.rs  write_zeros.rs
nros/src/data/: cipher.rs  fs_info.rs  mod.rs  object.rs
nros/src/data/record/: mod.rs
nros/src/data/record/compression/: lz4.rs  mod.rs  none.rs
nros/src/record/: mod.rs
nros/src/record/compression/: lz4.rs  mod.rs  none.rs
nros/src/record_cache/: lru.rs  mod.rs
nros/src/storage/: allocator.rs  load.rs  mod.rs
nros/src/storage/dev/: fs.rs  mem.rs  mod.rs  set.rs
nros/src/test/: allocator.rs  background.rs  cache.rs  dev.rs  encryption.rs  hard_limit.rs  mod.rs  record.rs  record_tree.rs  write_buffer.rs
nros/src/test/concurrency/: mod.rs
nros/src/test/fuzz/: v1.rs
nros/src/test/raid/: chain.rs  mirror.rs  mod.rs
test/: README.md  _finish.sh  _init.sh  bonnie++.sh  cargo.sh  check_ino  check_ino.c  create_rm.sh  create_rm_par.sh  generation.sh  git.sh  iozone.sh  mknod.sh  readdir_ino.sh  remove.sh  rename.sh  rename_par_race.sh  write_par.sh  xattr.sh
tool/: Cargo.toml
tool/src/: dump.rs  extract_key.rs  main.rs  make.rs  resize.rs
util/: Cargo.toml
util/src/: lib.rs
util/src/task/: lock.rs  lock_set.rs  mod.rs  waker_queue.rs
