[package]
name = "fuse"
version = "0.2.0"
edition = "2021"

[features]
parallel = ["nrfs/parallel"]

[dependencies.async-channel]
version = "1.8"

[dependencies.fuser]
version = "0.11"
features = ["abi-7-28"]

[dependencies.libc]
version = "*"

[dependencies.nrfs]
path = "../nrfs"

[dependencies.arena]
git = "https://git.sr.ht/~demindiro/arena"

[dependencies.env_logger]
version = "0.9"

[dependencies.futures-executor]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.log]
version = "0.4.6"
features = ["max_level_trace", "release_max_level_off"]
