[package]
name = "fuse"
version = "0.2.0"
edition = "2021"

[features]
parallel = ["nrfs/parallel"]
# Enable DHAT heap profiling.
#
# This should be significantly more efficient than valgrind.
dhat = ["dep:dhat"]

[dependencies.async-channel]
version = "1.8"

[dependencies.clap]
version = "4.1"
features = ["derive"]

[dependencies.dhat]
version = "0.3"
optional = true

[dependencies.fuser]
version = "0.11"
features = ["abi-7-28"]

[dependencies.libc]
version = "*"

[dependencies.nrfs]
path = "../nrfs"

[dependencies.env_logger]
version = "0.9"

[dependencies.futures-executor]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.log]
version = "0.4.6"
features = ["max_level_trace", "release_max_level_off"]

[dependencies.rpassword]
version = "7.2"
