[package]
name = "nrfs"
version = "0.2.0"
edition = "2021"

[features]
trace-all = ["trace", "nros/trace"]
trace = []
parallel = ["nros/parallel"]

[dependencies.bstr]
version = "1.1"

[dependencies.endian]
package = "nora_endian"
version = "0.1"

[dependencies.nros]
path = "../nros"

[dependencies.rangemap]
version = "1.0"

[dependencies.siphasher]
version = "0.3"

[dev-dependencies.futures-util]
version = "0.3"

[dev-dependencies.arbitrary]
version = "1.2"
features = ["derive"]

# https://github.com/rust-fuzz/cargo-fuzz/issues/256
[target.'cfg(fuzzing)'.dependencies.futures-util]
version = "0.3"

[target.'cfg(fuzzing)'.dependencies.arbitrary]
version = "1.2"
features = ["derive"]
