[package]
name = "nrfs"
version = "0.3.0"
edition = "2021"

[features]
trace-all = ["trace", "nros/trace"]
trace = []
parallel = ["nros/parallel"]

[dependencies]
nrkv = { path = "../nrkv" }
util = { path = "../util" }

[dependencies.bstr]
version = "1.1"

[dependencies.endian]
package = "nora_endian"
version = "0.1"

[dependencies.nros]
path = "../nros"

[dev-dependencies.futures-util]
version = "0.3"

[dev-dependencies.arbitrary]
version = "1.2"
features = ["derive"]
