[package]
name = "nros"
version = "0.1.0"
edition = "2021"

[dependencies.arena]
git = "https://git.sr.ht/~demindiro/arena"

[dependencies.arrayvec]
version = "0.7"

[dependencies.async-recursion]
version = "1.0"

[dependencies.endian]
package = "nora_endian"
#version = "0.1"
git = "https://github.com/Demindiro/nora_endian"

[dependencies.rangemap]
version = "1.0"

[dependencies.lz4_flex]
version = "0.9"
default-features = false

[dependencies.rustc-hash]
version = "1.1"

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3"]

[dependencies.futures-util]
version = "0.3"

[dev-dependencies.arbitrary]
version = "1.2"
features = ["derive"]

# https://github.com/rust-fuzz/cargo-fuzz/issues/256
[target.'cfg(fuzzing)'.dependencies.arbitrary]
version = "1.2"
features = ["derive"]
