[package]
name = "nros"
version = "0.3.0"
edition = "2021"

[features]
default = ["std"]
std = ["rand", "argon2/parallel"]
parallel = ["rayon"]
# Disallow writing over records allocated & freed in the same transacion.
#
# This option is useful for detecting use-after-frees.
# It should not be enabled in production as it greatly increases the space
# usage of each transaction.
never-overwrite = []
trace = []
# Track allocations
#
# This saves the stack trace for each allocation.
debug-trace-alloc = []

[dependencies.arena]
git = "https://git.sr.ht/~demindiro/arena"

[dependencies.arrayvec]
version = "0.7"

[dependencies.async-recursion]
version = "1.0"

[dependencies.endian]
package = "nora_endian"
#version = "0.1"
git = "https://github.com/Demindiro/nora_endian"

[dependencies.rangemap]
version = "1.3"

[dependencies.lz4_flex]
version = "0.9"
default-features = false
# safe-encode is slightly faster (9.2s -> 9.0s), go figure.
#
# perf stat without safe-encode:
#       39061490751      cycles                    #    4.208 GHz                      (83.33%)
#        1030151269      stalled-cycles-frontend   #    2.64% frontend cycles idle     (83.33%)
#        9810163765      stalled-cycles-backend    #   25.11% backend cycles idle      (83.33%)
#       60764910794      instructions              #    1.56  insn per cycle
#
# perf stat with safe-encode:
#       37424902119      cycles                    #    4.190 GHz                      (83.32%)
#        1005844054      stalled-cycles-frontend   #    2.69% frontend cycles idle     (83.34%)
#       14472855443      stalled-cycles-backend    #   38.67% backend cycles idle      (83.34%)
#       80920467032      instructions              #    2.16  insn per cycle
features = ["checked-decode", "safe-encode"]

[dependencies.xxhash-rust]
version = "0.8"
features = ["xxh3", "const_xxh3"]

[dependencies.chacha20]
version = "0.9"

[dependencies.chacha20poly1305]
version = "0.8"
features = ["reduced-round"]

[dependencies.generic-array]
version = "*"

[dependencies.argon2]
version = "0.4"

[dependencies.rand]
version = "0.8"
optional = true

[dependencies.futures-channel]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.rayon]
version = "1.6"
optional = true

[dev-dependencies.arbitrary]
version = "1.2"
features = ["derive"]

# https://github.com/rust-fuzz/cargo-fuzz/issues/256
[target.'cfg(fuzzing)'.dependencies.arbitrary]
version = "1.2"
features = ["derive"]
