[package]
name = "tool"
version = "0.2.0"
edition = "2021"

[features]
trace = ["nrfs/trace"]
parallel = ["nrfs/parallel"]

[dependencies.clap]
version = "4.1"
features = ["derive"]

[dependencies.chrono]
version = "0.4"

[dependencies.nrfs]
path = "../nrfs"

[dependencies.nros]
path = "../nros"

[dependencies.futures-executor]
version = "0.3"

[dependencies.futures-util]
version = "0.3"

[dependencies.rpassword]
version = "7.2"

[dependencies.num_cpus]
version = "1.0"
